// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmptySearch/> component when variant is \`explore\` passes in props matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EmptySearch
    variant="explore"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <img
        alt="Start exploring. Search by key-value pairs or use only filters to get insights on signals."
        className={undefined}
        data-test="start-exploring"
        src="//localhost:3000/explore.svg"
      />,
      "className": undefined,
      "message": "Search by key-value pairs or use only filters to get insights on signals.",
      "messageStyle": undefined,
      "title": "Start exploring.",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "alt": "Start exploring. Search by key-value pairs or use only filters to get insights on signals.",
        "className": undefined,
        "data-test": "start-exploring",
        "src": "//localhost:3000/explore.svg",
      },
      "ref": null,
      "rendered": null,
      "type": "img",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <img
          alt="Start exploring. Search by key-value pairs or use only filters to get insights on signals."
          className={undefined}
          data-test="start-exploring"
          src="//localhost:3000/explore.svg"
        />,
        "className": undefined,
        "message": "Search by key-value pairs or use only filters to get insights on signals.",
        "messageStyle": undefined,
        "title": "Start exploring.",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "Start exploring. Search by key-value pairs or use only filters to get insights on signals.",
          "className": undefined,
          "data-test": "start-exploring",
          "src": "//localhost:3000/explore.svg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<EmptySearch/> component when variant is \`noResult\` passes in props matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EmptySearch
    variant="noResult"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <img
        alt="No results found. Refine the search query and try searching again."
        className={undefined}
        data-test="no-result-found"
        src="//localhost:3000/noResult.svg"
      />,
      "className": undefined,
      "message": "Refine the search query and try searching again.",
      "messageStyle": undefined,
      "title": "No results found.",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "alt": "No results found. Refine the search query and try searching again.",
        "className": undefined,
        "data-test": "no-result-found",
        "src": "//localhost:3000/noResult.svg",
      },
      "ref": null,
      "rendered": null,
      "type": "img",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <img
          alt="No results found. Refine the search query and try searching again."
          className={undefined}
          data-test="no-result-found"
          src="//localhost:3000/noResult.svg"
        />,
        "className": undefined,
        "message": "Refine the search query and try searching again.",
        "messageStyle": undefined,
        "title": "No results found.",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "No results found. Refine the search query and try searching again.",
          "className": undefined,
          "data-test": "no-result-found",
          "src": "//localhost:3000/noResult.svg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
